# swarm-cid-py

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
src/swarm_cid/: __init__.py  swarm_cid.py  types.py
src/swarm_cid_py/: Exceptions.py  skeleton.py  swarm_cid.py  types.py
tests/: conftest.py  test_skeleton.py  test_swarm_cid.py
