[tool.poetry]
name = "swarm-cid-py"
version = "0.1.3"
description = "Utility library written in Python to convert Swarm hex references into Swarm CIDs"
authors = ["SAIKAT KARMAKAR <saikickkarma@protonmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
packages = [{ include = "swarm_cid", from = "src" }]
homepage = "https://github.com/Aviksaikat/swarm-cid-py"

[tool.poetry.dependencies]
python = "^3.9"
py-multiformats-cid = "^0.4.4"
multiformats-fix = "^0.2.2"
safe-pysha3 = "^1.0.4"

[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.5.1"
types-PyYAML = "^6.0.0"
types-requests = "^0.1.0"
types-setuptools = "*"
pandas-stubs = "^1.2.0.62"
types-SQLAlchemy = "^1.4.49"
flake8 = "^6.1.0"
flake8-breakpoint = "^1.1.0"
flake8-print = "^4.0.1"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^0.4.1"
mdformat-pyproject = "^0.0.1"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.pytest.project]
name = "swarm_cid"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
#]
# NOTE: Prevents the ape plugin from activating on our tests
# addopts = "-p no:ape_test"


[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.mdformat]
number = true

[[tool.mypy.overrides]]
module = "eth_keys.*"
ignore_missing_imports = true

# flake8
[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = ["__pycache__", ".venv/*", "docs/*"]
docstring-convention = "google"

[tool.mypy]
ignore_missing_imports = true
